--- a/src/utils/colors.scss
+++ b/src/utils/colors.scss
@@ -2,5 +2,5 @@ $main-color: #3d5a80;
 $white: #fff;
 $attention: #e09f3e;
 $warning: #e5383b;
-$attention-light: #FFD700;
+$rated: #FFD700;
 $disabled: #aeaeae;
