--- a/src/components/Employees-item/Employees-item.scss
+++ b/src/components/Employees-item/Employees-item.scss
@@ -41,7 +41,7 @@
     }
 
     .fa-star {
-      color: $warning;
+      color: $rated;
       width: 35px;
       height: 35px;
       text-align: center;
@@ -51,12 +51,13 @@
       transform: translateX(30px);
       opacity: 0;
     }
-
-    &like .fa-star {
-      opacity: 1;
-      transform: translateX(0);
-    }
   }
+}
+
+.list-group-item.like .fa-star {
+  opacity: 1;
+  transform: translateX(0);
+  transition: .3s transform;
 }
 
 .list-group-item.increase .list-group-item-label, .list-group-item.increase .list-group-item-input {
